force-app/main/default/objects/Sample_Article__kav/fields/Attachment_s__c.field-meta.xml
<CustomField>
    <fullName>Attachment_s__c</fullName>
    <label>Attachment(s)</label>
    <type>File</type>
</CustomField>