force-app/main/default/objects/Sample_Article__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The Article information.</description>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>