force-app/main/default/objects/Sample_Article__kav/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Enter keywords people will use to locate the Article</description>
    <inlineHelpText>Enter keywords to help locate this Article</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>